# ditto-back

./: .gitignore  Dockerfile  Makefile  alembic.ini  cloudbuild.yaml  docker-compose.yaml  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: pyright.yaml  ruff.yaml
app/: main.py
app/api/: api.py
app/api/routers/: chat.py  syagent.py
app/core/: config.py
app/crud/: chat.py  syagent.py
app/db/: session.py
app/models/: __init__.py  ai_chat.py  chat.py  syagent.py  user.py
app/models/utils/: mixin.py
app/schemas/: chat.py  syagent.py  utils.py
app/services/chat/: main.py  runnable.py
app/services/syagent/: agents.py  components.py  image.py  state.py  tools.py
migrations/: env.py
migrations/versions/: 035b700c6156_create_table.py  066db28e2ba6_create_table.py  21d96c716c6a_create_table.py  2de1549aa020_create_table.py  41c24ce68bae_create_table.py  71f3a681f0bb_create_table.py  83d7357df2f3_create_table.py  e7100f3623c8_create_table.py  f6927455feec_create_table.py  fe2e5cc695cc_create_table.py
src/: main.py
