[project]
name = "ditto-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "harutin", email = "godaharuto@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "numpy>=2.0.2",
    "pyright>=1.1.391",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
main = "src:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
