[project]
name = "ditto-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "harutin", email = "godaharuto@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "pydantic-settings>=2.7.1",
    "pyright>=1.1.391",
    "sqlalchemy>=2.0.37",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
main = "src:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "alembic>=1.14.0",
    "pre-commit>=4.0.1",
]
