[project]
name = "ditto-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "harutin", email = "godaharuto@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "isort>=5.13.2",
    "langchain>=0.3.14",
    "langchain-google-vertexai>=2.0.10",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.7.1",
    "pyright>=1.1.391",
    "sqlalchemy[asyncio]==2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
main = "src:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "alembic>=1.14.0",
    "pre-commit>=4.0.1",
    "psycopg2>=2.9.10",
]
